[apache/helix] -- Updated Maps.of to Sets.of for Java-8 build complaince (#2756)
Final Commit Message: Updated Helix codebase to be build compatible with JDK-8. Open source release will be based on Java 11.